--- a/unlock.html
+++ b/unlock.html
@@ -6,11 +6,11 @@
   <title>Unlocking — White Lotus</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{--primary:#6c63ff;--dark:#1a1a2e;--darker:#16213e;--light:#f5f5f5;--gray:#8a8a8a;--success:#2ecc71;--danger:#e74c3c}
+    :root{--primary:#0199f8;--dark:#1a1a2e;--darker:#16213e;--light:#f5f5f5;--gray:#8a8a8a;--success:#2ecc71;--danger:#e74c3c}
     *{box-sizing:border-box;margin:0;padding:0;font-family:'Poppins',sans-serif}
     body{background:linear-gradient(135deg,var(--darker),var(--dark));color:var(--light);display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px}
     .card{max-width:720px;width:100%;background:rgba(255,255,255,0.03);padding:30px;border-radius:14px;text-align:center;border:1px solid rgba(255,255,255,0.06)}
-    h1{font-size:32px;margin-bottom:10px;background:linear-gradient(90deg,var(--primary),#ff6584);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+    h1{font-size:32px;margin-bottom:10px;background:linear-gradient(90deg,var(--primary),#ff4b6f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
     p{color:var(--gray);margin-bottom:14px}
     .count{font-weight:700;color:var(--light);margin-top:8px}
     .btn{display:inline-block;padding:10px 20px;border-radius:50px;background:linear-gradient(90deg,var(--primary),#564fd8);color:white;border:none;cursor:pointer;margin-top:12px}
@@ -24,7 +24,7 @@
 <body>
   <div class="card">
     <h1>🔐 Verifying Access...</h1>
-    <p>Please wait while we verify the AdrinoLink check. If verification is successful you'll be granted access and redirected to Gateway Pro.</p>
+    <p>Please wait while we verify the AdrinoLink check. If verification is successful you'll be granted access and redirected to White Lotus.</p>
     <div class="spinner"></div>
     <div id="status" class="count">Verifying...</div>
     <div class="error-message" id="errorMessage"></div>
