--- a/index.html
+++ b/index.html
@@ -640,8 +640,16 @@ const COURSES = {
                         description: "Intigrated Circuit ",
                         units: [
                             {
-                                name: "Unit 1: Introduction to C",
+                                name: "Unit 1",
                                 lectures: [
+                                    { name: " L1", url: "https://fast.wistia.com/embed/medias/7ftq9e03yy" },
+                                    { name: " L2", url: "https://fast.wistia.com/embed/medias/zdk37jzvyk" },
+                                    { name: " L3", url: "https://fast.wistia.com/embed/medias/xp11xh221x" },
+                                    { name: " L4", url: "" },
+                                    { name: " L5", url: "" },
+                                    { name: " L6", url: "" },
+                                    { name: " L7", url: "" },
+                                    { name: " L8", url: "" },
                                     
                                 ]
                             }
