--- a/keygen.html
+++ b/keygen.html
@@ -52,8 +52,8 @@
 <script>
 /* ---------- CONFIG ---------- */
 const CONFIG = {
-  VPLINK_API_KEY: '3e55d38856cdb60b016f623411368884a4143e1b', // VPLink API key
-  VPLINK_ENDPOINT: 'https://arolinks.com/api', // VPLink API endpoint
+  VPLINK_API_KEY: '4422e8a3a6cf9f8b482e4e1974ab01b7139feb0f', // VPLink API key
+  VPLINK_ENDPOINT: 'https://gplinks.com/api', // VPLink API endpoint
   UNLOCK_URL: window.location.origin + '/unlock.html',
   ACCESS_DURATION_MS: 24 * 60 * 60 * 1000
 };
