--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ const COURSES = {
                                     { name: " L1", url: "https://fast.wistia.com/embed/medias/7ftq9e03yy" },
                                     { name: " L2", url: "https://fast.wistia.com/embed/medias/zdk37jzvyk" },
                                     { name: " L3", url: "https://fast.wistia.com/embed/medias/xp11xh221x" },
-                                    { name: " L4", url: "" },
+                                    { name: " L4", url: "https://fast.wistia.com/embed/medias/j6usgrglvj" },
                                     { name: " L5", url: "" },
                                     { name: " L6", url: "" },
                                     { name: " L7", url: "" },
