--- a/index.html
+++ b/index.html
@@ -646,10 +646,11 @@ const COURSES = {
                                     { name: " L2", url: "https://fast.wistia.com/embed/medias/zdk37jzvyk" },
                                     { name: " L3", url: "https://fast.wistia.com/embed/medias/xp11xh221x" },
                                     { name: " L4", url: "https://fast.wistia.com/embed/medias/j6usgrglvj" },
-                                    { name: " L5", url: "" },
-                                    { name: " L6", url: "" },
-                                    { name: " L7", url: "" },
-                                    { name: " L8", url: "" },
+                                    { name: " L5", url: "https://fast.wistia.com/embed/medias/s9qrflyjqw" },
+                                    { name: " L6", url: "https://fast.wistia.com/embed/medias/uw5o1tj0i9" },
+                                    { name: " L7", url: "https://fast.wistia.com/embed/medias/lud041zzs9" },
+                                    { name: " L8", url: "https://fast.wistia.com/embed/medias/hskd9fjq7w" },
+                                    { name: " L9", url: "https://fast.wistia.com/embed/medias/gqp4ewbpd3" },
                                     
                                 ]
                             }
