--- a/index.html
+++ b/index.html
@@ -819,17 +819,17 @@ const COURSES = {
  "1-2": {
                 "cse": [
                     { 
-                        id: "pps", 
-                        name: "PPS", 
+                        id: "Maths - 1", 
+                        name: "Maths - 1", 
                         icon: "fas fa-code",
-                        description: "PPS ",
+                        description: "Maths ",
                         units: [
                             {
-                                name: "Unit 1: Introduction to C",
+                                name: "Unit 1",
                                 lectures: [
-                                    { name: "Introduction to C Programming", url: "https://www.youtube.com/embed/dQw4w9WgXcQ" },
-                                    { name: "Data Types and Variables", url: "https://www.youtube.com/embed/dQw4w9WgXcQ" },
-                                    { name: "Input and Output", url: "https://www.youtube.com/embed/dQw4w9WgXcQ" }
+                                    { name: "Lec 1", url: "https://dai.ly/x9u6250" },
+                                    { name: "", url: "" },
+                                    { name: "", url: "" }
                                 ]
                             }
                         ]
