--- a/index.html
+++ b/index.html
@@ -856,7 +856,28 @@ const COURSES = {
                                     { name: "Lec - 5", url: "dm:x9u8fni", pdf : "https://jumpshare.com/share/okoVepu2G2YypHyQys0Q" },
                                   { name: "Lec - 6", url: "dm:x9u8fnm", pdf : "https://jumpshare.com/share/rhDBvEsjlERY2TNIyAxP" },
                                     { name: "Lec - 7", url: "dm:x9u8fng", pdf : "https://jumpshare.com/share/E7cAfglL1zQXJMOFyc8v" },
-                                  { name: "Lec - 8", url: "dm:", pdf : "https://jumpshare.com/share/krfTrXxa7qqSWt1xndai" },
+                                  { name: "Lec - 8", url: "dm:x9u8t2k", pdf : "https://jumpshare.com/share/krfTrXxa7qqSWt1xndai" },
+                                    { name: "Lec - 9", url: "dm:x9u8fns", pdf : "https://jumpshare.com/share/r9bqjXUTCQNWz2azNxON" },
+                                  { name: "Lec - 10", url: "dm:", pdf : "https://jumpshare.com/share/zEd51tZUgSy3iju8h46R" },
+                                    { name: "Lec - 11", url: "dm:", pdf : "https://jumpshare.com/share/ztlAbcaCL19SMLMjLCGw" },
+                                  { name: "Lec - 12", url: "dm:", pdf : "https://jumpshare.com/share/gNIGO5Hi2EHsQO9dvkpq" },
+                                    
+                                ]
+                            }
+                        ]
+                    },
+                  {
+                                name: "Unit 2 ",
+                                lectures: [
+                                  
+                                    { name: "Lec - 1", url: "dm:", pdf : "https://jumpshare.com/share/hwv948IiaSSZLn6eDtTR" },
+                                    { name: "Lec - 2", url: "dm:x9u8f", pdf : "https://jumpshare.com/share/SDkNHNAr0HmlIZXcvvB7" },
+                                    { name: "Lec - 3", url: "dm:x9u8fnc", pdf : "https://jumpshare.com/share/H1Eh3gWdC3DT0WQc45fb" },
+                                  { name: "Lec - 4", url: "dm:x9u8fnk", pdf : "https://jumpshare.com/share/870tEYsdHHkQiQbLAfS3" },
+                                    { name: "Lec - 5", url: "dm:x9u8fni", pdf : "https://jumpshare.com/share/okoVepu2G2YypHyQys0Q" },
+                                  { name: "Lec - 6", url: "dm:x9u8fnm", pdf : "https://jumpshare.com/share/rhDBvEsjlERY2TNIyAxP" },
+                                    { name: "Lec - 7", url: "dm:x9u8fng", pdf : "https://jumpshare.com/share/E7cAfglL1zQXJMOFyc8v" },
+                                  { name: "Lec - 8", url: "dm:x9u8t2k", pdf : "https://jumpshare.com/share/krfTrXxa7qqSWt1xndai" },
                                     { name: "Lec - 9", url: "dm:x9u8fns", pdf : "https://jumpshare.com/share/r9bqjXUTCQNWz2azNxON" },
                                   { name: "Lec - 10", url: "dm:", pdf : "https://jumpshare.com/share/zEd51tZUgSy3iju8h46R" },
                                     { name: "Lec - 11", url: "dm:", pdf : "https://jumpshare.com/share/ztlAbcaCL19SMLMjLCGw" },
@@ -867,6 +888,7 @@ const COURSES = {
                         ]
                     }
                 ],
+   
                 "ece": [
                     { 
                         id: "dsd", 
